Add Details, Connect Player/Create  to _Layout , Implement Create and Details method

--- a/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
+++ b/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Logon" asp-action="Index">Logon</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Player" asp-action="Create">Create New Account</a>
+                        </li>
 
                         <li class="nav-item">
                             <a class="nav-link text-dark disabled" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
