--- a/wizards/WizardsWeb/Views/Player/Details.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Details.cshtml
@@ -2,62 +2,44 @@
 @model Wizards.BusinessLogic.Player
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = $"Logged as {Model.UserName}";
 }
 
-<h1>Details</h1>
+<div>
+    <div class="row">
+        <div class="col-sm-4">
+            <h2>@Model.UserName</h2>
+            <h4>Player account</h4>
+            <a asp-action="Edit" asp-route-id="@Model.Id">Edit Player's Profile</a>
+            <hr />
+            <dl>
+                <dt class="col-sm-5">
+                    <label asp-for="UserName"></label>
+                </dt>
+                <dd class="col-sm-4">
+                    @Model.UserName
+                </dd>
+                <dt class="col-sm-5">
+                    <label asp-for="Email"></label>
+                </dt>
+                <dd class="col-sm-4">
+                    @Model.Email
+                </dd>
+                <dt class="col-sm-5">
+                    <label asp-for="DateOfBirth"></label>
+                </dt>
+                <dd class="col-sm-4">
+                    @Model.DateOfBirth.Date.ToString("d")
+                </dd>
+            </dl>
+        </div>
+        <div class="col-sm-6">
+            <partial name="_PlayersHeroes" model="Model.Heroes" />
+        </div>
+    </div>
+
+</div>
 
 <div>
-    <h4>Player</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @nameof(Model.UserName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Model.UserName
-        </dd>
-        <dt class = "col-sm-2">
-            @nameof(Model.Email)
-        </dt>
-        <dd class = "col-sm-10">
-            @Model.Email
-        </dd>
-        <dt class = "col-sm-2">
-            @nameof(Model.DateOfBirth)
-        </dt>
-        <dd class = "col-sm-10">
-            @Model.DateOfBirth
-        </dd>
-    </dl>
-    
-    <table class="table">
-        <thead>
-        <tr>
-            <th>
-                <label asp-for="Heroes.First().NickName"></label>
-            </th>
-            <th>
-                <label asp-for="Heroes.First().Restrictions"></label>
-            </th>
-        </tr>
-        </thead>
-        <tbody>
-            @foreach (var hero in Model.Heroes)
-            {
-                <tr>
-                    <td>
-                        @hero.NickName
-                    </td>
-                    <td>
-                        @hero.Restrictions
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
-</div>
-<div>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     <a asp-controller="Home" asp-action="Index">Back to Home Page</a>
 </div>
