--- a/wizards/WizardsWeb/Views/Player/_PlayersHeroes.cshtml
+++ b/wizards/WizardsWeb/Views/Player/_PlayersHeroes.cshtml
@@ -24,7 +24,7 @@
                 @hero.Restrictions
             </td>
             <td>
-                <button asp-action="Details" asp-route-id="@hero.Id">Play this Character</button> |
+                <button asp-action="Details" asp-route-id="@hero.Id">Play</button> |
                 <button asp-action="Delete" asp-route-id="@hero.Id">Delete</button>
             </td>
         </tr>
