--- a/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
+++ b/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
@@ -11,7 +11,13 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark text-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" style="color:#FFD700" asp-area="" asp-controller="Home" asp-action="Index">Wizards</a>
+ 
+                <img src="~/Images/logo.png" class="img-responsive" alt="Site Logo" style="height:20%; width: 20%"/>
+
+@*                <a href='@Url.Action("Index", "Home")'>
+    <img src="~/Images/logo.png" class="img-responsive" alt="Site Logo" style="height:20%; width:20%">
+    </a>
+*@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
