--- a/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
+++ b/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
@@ -16,8 +16,8 @@
 
 @*                <a href='@Url.Action("Index", "Home")'>
     <img src="~/Images/logo.png" class="img-responsive" alt="Site Logo" style="height:20%; width:20%">
-    </a>
-*@
+    </a>*@
+
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -97,8 +97,8 @@
     </div>
 
     <footer class="footer text-muted navbar-light bg-dark box-shadow">
-        <div class="container">
-            &copy; 2022 - WizardsWeb - <a href="https://github.com/infoshareacademy/jcszr6-wizards.git" target="_blank"> GIT Repository</a>
+        <div class="container" style='text-align:center'>
+            &copy; 2022 - WizardsWeb - <a href="https://github.com/infoshareacademy/jcszr6-wizards.git" target="_blank"> GIT Repository</a> Ver. 1.0
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
