Final refactoring and rework:
 - Now routes call for player by id instead of UserName and Password
 - GetUniqueId in PlayerService generates number using Guid with convertion to positive integer greater than zero
 - Clean unused Usings and code

--- a/wizards/WizardsWeb/Views/Player/Delete.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Delete.cshtml
@@ -53,6 +53,6 @@
             <span asp-validation-for="PasswordToConfirmDelete" class="text-danger"></span>
         </div>
         <input type="submit" value="Delete" class="btn btn-danger" />
-        <a asp-action="Edit" asp-route-userName="@Model.UserName" asp-route-password="@Model.Password">Cancel</a>
+        <a asp-action="Edit" asp-route-id="@Model.Id">Cancel</a>
     </form>
 </div>
