--- a/wizards/WizardsWeb/Views/Player/Details.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Details.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Linq
-@model Wizards.BusinessLogic.Player
+﻿@model Wizards.BusinessLogic.Player
 
 @{
     ViewData["Title"] = $"Player: {Model.UserName}";
