--- a/wizards/WizardsWeb/Views/Player/Edit.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Edit.cshtml
@@ -2,22 +2,15 @@
 
 <h3>Edit Player's Profile</h3>
 <h5>@Model.UserName</h5>
-<a asp-action="Details" asp-route-userName="@Model.UserName" asp-route-password="@Model.Password">Back To Details</a>
+<a asp-action="Details" asp-route-id="@Model.Id">Back To Details</a>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <a
-            class="btn-primary"
-            asp-action="EditPassword"
-            asp-route-userName="@Model.UserName"
-            asp-route-password="@Model.Password">
-            Edit Password
-        </a>
+        <a class="btn-primary" asp-action="EditPassword" asp-route-id="@Model.Id">Edit Password</a>
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <input asp-for="Id" hidden="true"/>
-                <input asp-for="UserName" hidden="true"/>
                 <input asp-for="Password" hidden="true"/>
             </div>
             <div class="form-group">
@@ -39,7 +32,7 @@
 
 <div>
     <br/><hr/><br/>
-    <a class="btn-danger" asp-action="Delete" asp-route-userName="@Model.UserName" asp-route-password="@Model.Password">Delete Account</a>
+    <a class="btn-danger" asp-action="Delete" asp-route-id="@Model.Id">Delete Account</a>
 </div>
 
 @section Scripts {
