--- a/wizards/WizardsWeb/Views/Player/EditPassword.cshtml
+++ b/wizards/WizardsWeb/Views/Player/EditPassword.cshtml
@@ -13,7 +13,6 @@
         <form asp-action="EditPassword">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input asp-for="Id" hidden="true" />
-            <input asp-for="UserName" hidden="true" />
             <input asp-for="Password" hidden="true" />
             <div class="form-group">
                 <label asp-for="EnterOldPassword" class="control-label"></label>
@@ -38,9 +37,11 @@
 </div>
 
 <div>
-    <a asp-action="Edit" asp-route-userName="@Model.UserName" asp-route-password="@Model.Password">Back to Edit</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Back to Edit</a>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
+}
 }
