Set correct controller and action for SignUp button

--- a/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
+++ b/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                     </ul>
                     <div>
                         <a type="button" class="btn btn-outline-light me-2" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
-                        <a type="button" class="btn btn-warning me-2" asp-area="" asp-controller="SignUp" asp-action="Index">SignUp</a>
+                        <a type="button" class="btn btn-warning me-2" asp-area="" asp-controller="Player" asp-action="Create">SignUp</a>
                     </div>
                 </div>
             </div>
