--- a/wizards/WizardsWeb/Views/Player/Edit.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Edit.cshtml
@@ -11,6 +11,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <input asp-for="Id" hidden="true"/>
+                <input asp-for="UserName" hidden="true"/>
                 <input asp-for="Password" hidden="true"/>
             </div>
             <div class="form-group">
