correct issue with EditPassword view

--- a/wizards/WizardsWeb/Views/Player/EditPassword.cshtml
+++ b/wizards/WizardsWeb/Views/Player/EditPassword.cshtml
@@ -13,6 +13,7 @@
         <form asp-action="EditPassword">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input asp-for="Id" hidden="true" />
+            <input asp-for="UserName" hidden="true" />
             <input asp-for="Password" hidden="true" />
             <div class="form-group">
                 <label asp-for="EnterOldPassword" class="control-label"></label>
