Code review; hard refactor:
- merge GameDataService into GameDataRepository;
- Rename ModelsForViews as ModelViews
- Rename all models for views in proper name style
- Move ModelViews into Wizards.Web
- Adjust namespaces

--- a/wizards/WizardsWeb/Views/Player/Create.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Wizards.BusinessLogic.PlayerForCreate
+﻿@model WizardsWeb.ModelViews.PlayerCreateModelView
 
 @{
     ViewData["Title"] = "Create new Player";
