--- a/wizards/WizardsWeb/Views/Player/Delete.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Wizards.BusinessLogic.PlayerForDelete
+﻿@model WizardsWeb.ModelViews.PlayerDeleteModelView
 
 @{
     ViewData["Title"] = "Delete";
