--- a/wizards/WizardsWeb/Views/Player/EditPassword.cshtml
+++ b/wizards/WizardsWeb/Views/Player/EditPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Wizards.BusinessLogic.PasswordChange
+﻿@model WizardsWeb.ModelViews.PasswordChangeModelView
 
 @{
     ViewData["Title"] = "EditPassword";
