--- a/wizards/WizardsWeb/Views/Player/_PlayerInfo.cshtml
+++ b/wizards/WizardsWeb/Views/Player/_PlayerInfo.cshtml
@@ -1,4 +1,4 @@
-﻿@model Wizards.BusinessLogic.Player
+﻿@model WizardsWeb.ModelViews.PlayerDetailsModelView
 
 <h2>@Model.UserName</h2>
 <h4>Player account</h4>
