--- a/wizards/WizardsWeb/Views/Player/Details.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model WizardsWeb.ModelViews.PlayerDetailsModelView
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model WizardsWeb.ModelViews.PlayerDetailsModelView
 
 @{
     ViewData["Title"] = $"Player: {Model.UserName}";
