--- a/wizards/WizardsWeb/Views/Player/EditPassword.cshtml
+++ b/wizards/WizardsWeb/Views/Player/EditPassword.cshtml
@@ -1,4 +1,5 @@
-﻿@model WizardsWeb.ModelViews.PasswordChangeModelView
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model WizardsWeb.ModelViews.PasswordChangeModelView
 
 @{
     ViewData["Title"] = "EditPassword";
