--- a/wizards/WizardsWeb/Views/Player/_PlayersHeroes.cshtml
+++ b/wizards/WizardsWeb/Views/Player/_PlayersHeroes.cshtml
@@ -1,4 +1,5 @@
-﻿@model WizardsWeb.ModelViews.PlayerDetailsModelView
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model WizardsWeb.ModelViews.PlayerDetailsModelView
 
 <h2>Player's Heroes</h2>
 <br/>
