--- a/wizards/WizardsWeb/Views/Player/Create.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model WizardsWeb.ModelViews.PlayerCreateModelView
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model WizardsWeb.ModelViews.PlayerCreateModelView
 
 @{
     ViewData["Title"] = "Create new Player";
