--- a/wizards/WizardsWeb/Views/Player/Edit.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model WizardsWeb.ModelViews.PlayerEditModelView
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model WizardsWeb.ModelViews.PlayerEditModelView
 
 <h3>Edit Player's Profile</h3>
 <h5>@Model.UserName</h5>
