Add Controller; Add methods for create, Add create Views; Add link in PlayersHeroes to Hero controller => StartCreation

--- a/wizards/WizardsWeb/Views/Player/_PlayersHeroes.cshtml
+++ b/wizards/WizardsWeb/Views/Player/_PlayersHeroes.cshtml
@@ -3,6 +3,9 @@
 
 <h2>Player's Heroes</h2>
 <br/>
+
+<a asp-controller="Hero" asp-action="StartCreation" asp-route-playerId="@Model.Id">Create New Hero</a>
+
 <table class="table">
     <thead>
     <tr>
