--- a/wizards/WizardsWeb/Views/Hero/SetAvatar.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/SetAvatar.cshtml
@@ -5,43 +5,41 @@
 }
 
 <h1>Create New Hero</h1>
-<br/>
+<br />
 <h3>Choose Avatar of your hero</h3>
-<hr />
-
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="SetAvatar">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <input asp-for="PlayerId" hidden="true" />
-                <input asp-for="Profession" hidden="true" />
+<form asp-action="SetAvatar">
+    <input asp-for="PlayerId" hidden="true" />
+    <input asp-for="Profession" hidden="true" />
+    <hr />
+    <div class="row">
+        @for (int i = 1; i <= 7; i++)
+        {
+            var image = $"Avatars/Wizard-{i}.png";
+            <div class="col-sm-3">
+                <div class="row" align="center">
+                    <img src="@image" width="210" height="280"/>
+                </div>
+                <div class="row">
+                    <div align="center"><input asp-for="AvatarImageNumber" type="radio" value="@i"/></div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="AvatarImageNumber" class="control-label"></label>
-                <select asp-for="AvatarImageNumber" class="form-control">
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                </select>
-                <span asp-validation-for="AvatarImageNumber" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Set Avatar" class="btn btn-primary" />
-            </div>
-        </form>
+        }
     </div>
-</div>
+    <hr />
+    <div class="form-group">
+        <input type="submit" value="Set Avatar" class="btn btn-primary" />
+    </div>
+</form>
 
 <div>
+    <br />
     <a asp-controller="Player" asp-action="Details" asp-route-id="@Model.PlayerId">Leave Creator</a>
     <br/>
-    <a asp-action="SetProfession" asp-route-heroCreate="Model">Back to Profession choice</a>
+    <a asp-action="SetProfessionView" asp-route-playerId="@Model.PlayerId" asp-route-profession="@Model.Profession">Back to Profession choice</a>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
+}
 }
