--- a/wizards/WizardsWeb/Views/Hero/SetProfession.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/SetProfession.cshtml
@@ -1,45 +1,60 @@
 ﻿@model WizardsWeb.ModelViews.HeroCreateModelView
+@using Wizards.Core.Model.Enums
 
 @{
     ViewData["Title"] = "Set Profession";
 }
 
 <h1>Create New Hero</h1>
-<br/>
+<br />
 <h3>Choose Profession of your hero</h3>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <h5>Sorcerer</h5>
-        <p>Sorcerers are using the power of natural elements to deal damage and protect themselves. They are using staffs, spellbooks or sceprets.</p>
+
+
+<form asp-action="SetProfession">
+    <input asp-for="PlayerId" hidden="true" />
+    <hr/>
+    <div class="row">
+        <div class="col-md-1" align="center">
+            <input asp-for="Profession" type="radio" value="@HeroProfession.Sorcerer"/>
+        </div>
+        <div class="col-md-2" align="center">
+            <img src="Professions/Sorcerer.png" width="100" height="100"/>
+        </div>
+        <div class="col-md-7">
+            <h5>Sorcerer</h5>
+            <p>
+                Sorcerers are using the power of natural elements to deal high damage and protect themselves. 
+                They are using staffs, spell-books or scepters as weapons.
+                Theirs power is as wild as element they use. 
+            </p>
+        </div>
     </div>
-</div>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="SetProfession">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <input asp-for="PlayerId" hidden="true" />
-            </div>
-            <div class="form-group">
-                <label asp-for="Profession" class="control-label"></label>
-                <select asp-for="Profession" class="form-control">
-                    <option value="Sorcerer">Sorcerer</option>
-                </select>
-                <span asp-validation-for="Profession" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Set Profession" class="btn btn-primary" />
-            </div>
-        </form>
+    <hr/>
+    <div class="row">
+        <div class="col-md-1" align="center">
+            <input asp-for="Profession" type="radio" value="@HeroProfession.Necromancer"/>
+        </div>
+        <div class="col-md-2" align="center">
+            <img src="Professions/Necromancer.png" width="100" height="100"/>
+        </div>
+        <div class="col-md-7">
+            <h5>Necromancer</h5>
+            <p>Coming soon...</p>
+        </div>
     </div>
-</div>
+    <hr/>
+    <div class="form-group">
+        <input type="submit" value="Set profession" class="btn btn-primary"/>
+    </div>
+</form>
 
 <div>
+    <br />
     <a asp-controller="Player" asp-action="Details" asp-route-id="@Model.PlayerId">Leave Creator</a>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
+}
 }
