--- a/wizards/WizardsWeb/Views/Hero/SetProfession.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/SetProfession.cshtml
@@ -18,7 +18,7 @@
             <input asp-for="Profession" type="radio" value="@HeroProfession.Sorcerer"/>
         </div>
         <div class="col-md-2" align="center">
-            <img src="Professions/Sorcerer.png" width="100" height="100"/>
+            <img src="~/Images/Hero/Professions/Sorcerer.png" width="100" height="100"/>
         </div>
         <div class="col-md-7">
             <h5>Sorcerer</h5>
@@ -32,10 +32,10 @@
     <hr/>
     <div class="row">
         <div class="col-md-1" align="center">
-            <input asp-for="Profession" type="radio" value="@HeroProfession.Necromancer"/>
+            <input asp-for="Profession" type="radio" value="@HeroProfession.Necromancer" disabled="true"/>
         </div>
         <div class="col-md-2" align="center">
-            <img src="Professions/Necromancer.png" width="100" height="100"/>
+            <img src="~/Images/Hero/Professions/Necromancer.png" width="100" height="100"/>
         </div>
         <div class="col-md-7">
             <h5>Necromancer</h5>
