--- a/wizards/WizardsWeb/Views/Player/Edit.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Edit.cshtml
@@ -7,7 +7,10 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <a class="btn-primary" asp-action="EditPassword" asp-route-id="@Model.Id">Edit Password</a>
+        <a type="button" class="btn btn-primary" asp-action="EditPassword" asp-route-id="@Model.Id">Edit Password</a>
+        <br/>
+        <a type="button" class="btn btn-danger" asp-action="Delete" asp-route-id="@Model.Id">Delete Account</a>
+        <br/>
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -29,11 +32,8 @@
         </form>
     </div>
 </div>
-
-<div>
-    <br/><hr/><br/>
-    <a class="btn-danger" asp-action="Delete" asp-route-id="@Model.Id">Delete Account</a>
-</div>
+<br/>
+<hr/>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
