--- a/wizards/WizardsWeb/Views/Hero/Delete.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/Delete.cshtml
@@ -5,51 +5,61 @@
 }
 
 <h1>Delete Hero</h1>
-<br/>
+<br />
 <h3 class="alert-danger">Are you sure you want to delete @Model.NickName?</h3>
 <h4 class="alert-danger">All progress made on this character will be lost!</h4>
 <hr />
 
 <div>
-    <h4>HeroDeleteModelView</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            <label asp-for="NickName">Nick Name</label>
-        </dt>
-        <dd class = "col-sm-10">
-            @Model.NickName
-        </dd>
-        <dt class = "col-sm-2">
-            <label asp-for="Statistics.RankPoints">Earned Rank Points</label>
-        </dt>
-        <dd class = "col-sm-10">
-            @Model.Statistics.RankPoints
-        </dd>
-        <dt class = "col-sm-2">
-            <label asp-for="Statistics.TotalMatchPlayed">Total Match Played</label>
-        </dt>
-        <dd class = "col-sm-10">
-            @Model.Statistics.TotalMatchPlayed
-        </dd>
-        <dt class = "col-sm-2">
-            <label>Win Ratio</label>
-        </dt>
-        <dd class="col-sm-10">
-            @Model.WinRatio()
-        </dd>
-
-    </dl>
-    
-    <form asp-action="Delete">
-        <div class="form-group">
-            <input asp-for="Id" hidden="true"/>
-            <input asp-for="PlayerId" hidden="true"/>
-            
-            <input asp-for="ConfirmNickName" class="form-control"/>
-            <span asp-validation-for="ConfirmNickName" class="text-danger"></span>
+    <div class="row">
+        <div class="col-md-4">
+            <img src="~/@Model.AvatarImageAddres()" width="300" height="400" />
         </div>
-        <input type="submit" value="Delete" class="btn btn-danger"/> |
-        <a asp-action="Details" asp-controller="Player" asp-route-id="@Model.PlayerId">Cancel</a>
-    </form>
+        <div class="col-md-4">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="~/@Model.ProfessionImageAddres()" width="100" height="100" />
+                </div>
+                <div class="col-md-6">
+                    <h4>@Model.NickName</h4>
+                    <h5>@Model.Profession.ToString()</h5>
+                </div>
+            </div>
+            <hr />
+            <div class="row">
+                <div class="col-md-6">
+                    <h6>Gold: </h6>
+                    <h6>Ranking Points: </h6><br />
+                    <h6>Total match played: </h6>
+                    <h6>Total match won: </h6>
+                    <h6>Total match lost: </h6>
+                    <h6>Win ratio: </h6>
+                </div>
+                <div class="col-md-6">
+                    <h6>@Model.Gold</h6>
+                    <h6>@Model.Statistics.RankPoints</h6><br />
+                    <h6>@Model.Statistics.TotalMatchPlayed</h6>
+                    <h6>@Model.Statistics.TotalMatchWin</h6>
+                    <h6>@Model.Statistics.TotalMatchLoose</h6>
+                    <h6>@Model.GetWinRatio()</h6>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <form asp-action="Delete">
+            <div class="form-group">
+                <input asp-for="Id" hidden="true" />
+                <input asp-for="PlayerId" hidden="true" />
+                
+                <label asp-for="ConfirmNickName"></label>
+                <input asp-for="ConfirmNickName" class="form-control" />
+                <span asp-validation-for="ConfirmNickName" class="text-danger"></span>
+            </div>
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
+            <a asp-action="Details" asp-controller="Player" asp-route-id="@Model.PlayerId">Cancel</a>
+        </form>
+    </div>
 </div>
