--- a/wizards/WizardsWeb/Views/Hero/Details.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/Details.cshtml
@@ -6,18 +6,31 @@
 
 <div class="row">
     <div class="col-md-4">
-        <partial name="_HeroAvatar" model="Model"/>
+        <div class="row">
+            <div class="col-md-12">
+                <img src="~/@Model.AvatarImageAddres()" width="330" height="440" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="~/@Model.ProfessionImageAddres()" width="100" height="100"/>
+            </div>
+            <div class="col-md-8">
+                <h4>@Model.NickName</h4>
+                <h5>@Model.Profession.ToString()</h5>
+            </div>
+        </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-5">
         <a type="button" class="btn btn-warning" asp-action="Equipment">Equipment</a><br /><br />
         <a type="button" class="btn btn-warning" asp-action="Merchant">Merchant</a><br /><br />
         <a type="button" class="btn btn-warning" asp-action="Edit" asp-route-id="@Model.Id">Edit Hero</a><br /><br />
         <a type="button" class="btn btn-warning" asp-controller="Player" asp-action="Details" asp-route-id="@Model.PlayerId">Back to Hero choice</a><br /><br />
         <a type="button" class="btn btn-warning" asp-action="ArenaPvP">PvP Arena</a><br /><br />
     </div>
-    <div class="col-md-4">
-        <partial name="_HeroAttributes" model="Model.Attributes"/>
-        <partial name="_HeroStatistics" model="Model.Attributes"/>
+    <div class="col-md-3">
+        <partial name="_HeroAttributes" model="Model.Attributes"/><br/><br/>
+        <partial name="_HeroStatistics" model="Model.Statistics"/>
     </div>
 </div>
 
