--- a/wizards/WizardsWeb/Views/Hero/Delete.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/Delete.cshtml
@@ -6,45 +6,17 @@
 
 <h1>Delete Hero</h1>
 <br />
-<h3 class="alert-danger">Are you sure you want to delete @Model.NickName?</h3>
+<h3 class="alert-danger">Are you sure you want to delete @Model.Basics.NickName?</h3>
 <h4 class="alert-danger">All progress made on this character will be lost!</h4>
 <hr />
 
 <div>
     <div class="row">
         <div class="col-md-4">
-            <img src="~/@Model.AvatarImageAddres()" width="300" height="400" />
+            <partial name="_HeroBasicPresentation" model="@Model.Basics"/>
         </div>
         <div class="col-md-4">
-            <div class="row">
-                <div class="col-md-6">
-                    <img src="~/@Model.ProfessionImageAddres()" width="100" height="100" />
-                </div>
-                <div class="col-md-6">
-                    <h4>@Model.NickName</h4>
-                    <h5>@Model.Profession.ToString()</h5>
-                </div>
-            </div>
-            <hr />
-            <div class="row">
-                <div class="col-md-6">
-                    <h6>Gold: </h6>
-                    <h6>Ranking Points: </h6><br />
-                    <h6>Total match played: </h6>
-                    <h6>Total match won: </h6>
-                    <h6>Total match lost: </h6>
-                    <h6>Win ratio: </h6>
-                </div>
-                <div class="col-md-6">
-                    <h6>@Model.Gold</h6>
-                    <h6>@Model.Statistics.RankPoints</h6><br />
-                    <h6>@Model.Statistics.TotalMatchPlayed</h6>
-                    <h6>@Model.Statistics.TotalMatchWin</h6>
-                    <h6>@Model.Statistics.TotalMatchLoose</h6>
-                    <h6>@Model.GetWinRatio()</h6>
-                </div>
-
-            </div>
+            <partial name="_HeroStatistics" model="@Model.Statistics"/>
         </div>
     </div>
 
