--- a/wizards/WizardsWeb/Views/Hero/_HeroStatistics.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/_HeroStatistics.cshtml
@@ -2,19 +2,47 @@
 
 <h4>Statistics</h4>
 <hr />
-<div class="row">
-    <div class="col-md-8">
-        Rank Points<br/><hr/>
-        Total match played<br/>
-        Total match won<br/>
-        Total match lost<br/><hr/>
-        Win ratio
+<div class="col-md-12">
+    <div class="row">
+        <div class="col-md-8">
+            <label asp-for="RankPoints"></label>
+        </div>
+        <div class="col-md-4">
+            @($"{Model.RankPoints:##,##0}")
+        </div>
     </div>
-    <div class="col-md-4">
-        @Model.RankPoints<br/><hr/>
-        @Model.TotalMatchPlayed<br/>
-        @Model.TotalMatchWin<br/>
-        @Model.TotalMatchLoose<br/><hr/>
-        @Model.GetWinRatio()
+    <hr/>
+    <div class="row">
+        <div class="col-md-8">
+            <label asp-for="TotalMatchPlayed"></label>
+        </div>
+        <div class="col-md-4">
+            @($"{Model.TotalMatchPlayed:##,##0}")
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-8">
+            <label asp-for="TotalMatchWin"></label>
+        </div>
+        <div class="col-md-4">
+            @($"{Model.TotalMatchWin:##,##0}")
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-8">
+            <label asp-for="TotalMatchLoose"></label>
+        </div>
+        <div class="col-md-4">
+            @($"{Model.TotalMatchLoose:##,##0}")
+        </div>
+    </div>
+    <hr/>
+    <div class="row">
+        <div class="col-md-8">
+            <label asp-for="WinRatio"></label>
+        </div>
+        <div class="col-md-4">
+            @Model.WinRatio
+        </div>
     </div>
 </div>
