Repair validation in player and rework for one method 'Validate'

--- a/wizards/WizardsWeb/Views/Player/Edit.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Edit.cshtml
@@ -7,8 +7,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <a type="button" class="btn btn-primary" asp-action="EditPassword" asp-route-id="@Model.Id">Edit Password</a>
-        <br/>
+        <a type="button" class="btn btn-primary" asp-action="EditPassword" asp-route-id="@Model.Id">Edit Password</a><br/><br/>
         <a type="button" class="btn btn-danger" asp-action="Delete" asp-route-id="@Model.Id">Delete Account</a>
         <br/>
         <form asp-action="Edit">
