Editing Hero Name and Avatar works with Cost logic;

--- a/wizards/WizardsWeb/Views/Player/Delete.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Delete.cshtml
@@ -50,5 +50,5 @@
         </div>
         <input type="submit" value="Delete" class="btn btn-danger" />
     </form>
-    <a type="button" class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Id">Cancel</a>
+    <a type="button" class="btn btn-success"  asp-action="Edit" asp-route-id="@Model.Id">Cancel</a>
 </div>
