--- a/wizards/WizardsWeb/Views/Hero/Details.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/Details.cshtml
@@ -6,12 +6,17 @@
 
 <div class="row">
     <div class="col-md-5">
-        <partial name="_HeroBasicPresentation" model="@Model.Basics"/>
+        <partial name="_HeroBasicPresentation" model="@Model.Basics"/><br/>
+        <a type="button" class="btn btn-primary" asp-action="EditNickName" asp-route-id="@Model.Id" asp-route-playerId="@Model.PlayerId">
+            Edit Name
+        </a>
+        <a type="button" class="btn btn-primary" asp-action="EditAvatar" asp-route-id="@Model.Id" asp-route-playerId="@Model.PlayerId">
+            Edit Avatar
+        </a>
     </div>
     <div class="col-md-3">
         <a type="button" class="btn btn-warning" asp-action="Equipment">Equipment</a><br /><br />
         <a type="button" class="btn btn-warning" asp-action="Merchant">Merchant</a><br /><br />
-        <a type="button" class="btn btn-warning" asp-action="Edit" asp-route-id="@Model.Id">Edit Hero</a><br /><br />
         <a type="button" class="btn btn-warning" asp-controller="Player" asp-action="Details" asp-route-id="@Model.PlayerId">Back to Hero choice</a><br /><br />
         <a type="button" class="btn btn-warning" asp-action="ArenaPvP">PvP Arena</a><br /><br />
     </div>
