Add PlayerId property into Hero model; Add migration that solves issues with Cascade Deleting; Fill Database with Heroes;

--- a/wizards/WizardsWeb/Views/Hero/Details.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/Details.cshtml
@@ -7,10 +7,10 @@
 <div class="row">
     <div class="col-md-5">
         <partial name="_HeroBasicPresentation" model="@Model.Basics"/><br/>
-        <a type="button" class="btn btn-primary" asp-action="EditNickName" asp-route-id="@Model.Id" asp-route-playerId="@Model.PlayerId">
+        <a type="button" class="btn btn-primary" asp-action="EditNickName" asp-route-id="@Model.Id">
             Edit Name
         </a>
-        <a type="button" class="btn btn-primary" asp-action="EditAvatar" asp-route-id="@Model.Id" asp-route-playerId="@Model.PlayerId">
+        <a type="button" class="btn btn-primary" asp-action="EditAvatar" asp-route-id="@Model.Id">
             Edit Avatar
         </a>
     </div>
