--- a/wizards/WizardsWeb/Views/Hero/EditNickName.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/EditNickName.cshtml
@@ -30,7 +30,7 @@ Your gold: @($"{Model.Gold:##,##0}")<br/>
 </div>
 
 <div>
-    <a type="button" class="btn btn-warning" asp-action="Details" asp-route-id="@Model.Id" asp-route-playerId="@Model.PlayerId">Back to Details</a>
+    <a type="button" class="btn btn-warning" asp-action="Details" asp-route-id="@Model.Id">Back to Details</a>
 </div>
 
 @section Scripts {
