--- a/wizards/WizardsWeb/Views/Player/_PlayersHeroes.cshtml
+++ b/wizards/WizardsWeb/Views/Player/_PlayersHeroes.cshtml
@@ -34,10 +34,10 @@
                     @hero.Profession
                 </td>
                 <td>
-                    <a type="button" class="btn btn-primary" asp-controller="Hero" asp-action="Details" asp-route-id="@hero.Id" asp-route-playerId="@Model.Id">
+                    <a type="button" class="btn btn-primary" asp-controller="Hero" asp-action="Details" asp-route-id="@hero.Id">
                         Play Character
                     </a> 
-                    <a type="button" class="btn btn-danger" asp-controller="Hero" asp-action="Delete" asp-route-id="@hero.Id" asp-route-playerId="@Model.Id">
+                    <a type="button" class="btn btn-danger" asp-controller="Hero" asp-action="Delete" asp-route-id="@hero.Id">
                         Delete
                     </a>
                 </td>
