--- a/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
+++ b/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
@@ -45,6 +45,9 @@
                         <a type="button" class="btn btn-outline-light me-2" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
                         <a type="button" class="btn btn-warning me-2" asp-area="" asp-controller="Player" asp-action="Create">SignUp</a>
                     </div>
+
+                    <partial name="_LoginPartial"/>
+
                 </div>
             </div>
         </nav>
