add view, controller, services

--- a/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
+++ b/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <title>@ViewData["Title"] - WizardsWeb</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link href="//cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css" rel="stylesheet" />
+
 </head>
 <body>
     <header>
@@ -39,6 +41,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white disabled" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white disabled" asp-area="" asp-controller="Search" asp-action="Index">Privacy</a>
                         </li>
                     </ul>
                     <div>
