Transfer Login, Register, Logout to PlayerController and views;

--- a/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
+++ b/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
@@ -41,10 +41,10 @@
                             <a class="nav-link text-white disabled" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
-                    <div>
+                    @*<div>
                         <a type="button" class="btn btn-outline-light me-2" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
                         <a type="button" class="btn btn-warning me-2" asp-area="" asp-controller="Player" asp-action="Create">SignUp</a>
-                    </div>
+                    </div>*@
 
                     <partial name="_LoginPartial"/>
 
