Change Methods in PlayerController; Adjusted Url's in Player Views;

--- a/wizards/WizardsWeb/Views/Hero/Delete.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/Delete.cshtml
@@ -31,7 +31,7 @@
                 <span asp-validation-for="ConfirmNickName" class="text-danger"></span>
             </div>
             <input type="submit" value="Delete" class="btn btn-danger" /> |
-            <a type="button" class="btn btn-success" asp-action="Details" asp-controller="Player" asp-route-id="@Model.PlayerId">Cancel</a>
+            <a type="button" class="btn btn-success" asp-action="Details" asp-controller="Player">Cancel</a>
         </form>
     </div>
 </div>
