--- a/wizards/WizardsWeb/Views/Hero/Details.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/Details.cshtml
@@ -17,7 +17,7 @@
     <div class="col-md-3">
         <a type="button" class="btn btn-warning" asp-action="Equipment">Equipment</a><br /><br />
         <a type="button" class="btn btn-warning" asp-action="Merchant">Merchant</a><br /><br />
-        <a type="button" class="btn btn-warning" asp-controller="Player" asp-action="Details" asp-route-id="@Model.PlayerId">Back to Hero choice</a><br /><br />
+        <a type="button" class="btn btn-warning" asp-controller="Player" asp-action="Details">Back to Hero choice</a><br /><br />
         <a type="button" class="btn btn-warning" asp-action="ArenaPvP">PvP Arena</a><br /><br />
     </div>
     <div class="col-md-4">
