--- a/wizards/WizardsWeb/Views/Player/EditPassword.cshtml
+++ b/wizards/WizardsWeb/Views/Player/EditPassword.cshtml
@@ -13,7 +13,6 @@
     <div class="col-md-4">
         <form asp-action="EditPassword">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input asp-for="Id" hidden="true" />
             <div class="form-group">
                 <label asp-for="EnterOldPassword" class="control-label"></label>
                 <input asp-for="EnterOldPassword" class="form-control" />
@@ -37,7 +36,7 @@
 </div>
 
 <div>
-    <a type="button" class="btn btn-warning" asp-action="Edit" asp-route-id="@Model.Id">Back to Edit</a>
+    <a type="button" class="btn btn-warning" asp-action="Edit">Back to Edit</a>
 </div>
 
 @section Scripts {
