--- a/wizards/WizardsWeb/Views/Hero/Create.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/Create.cshtml
@@ -31,7 +31,7 @@
 
 <div>
     <br />
-    <a asp-controller="Player" asp-action="Details" asp-route-id="@Model.PlayerId">
+    <a asp-controller="Player" asp-action="Details">
         Leave Creator
     </a>
     <br/>
