--- a/wizards/WizardsWeb/Views/Hero/SetAvatar.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/SetAvatar.cshtml
@@ -33,7 +33,7 @@
 
 <div>
     <br />
-    <a asp-controller="Player" asp-action="Details" asp-route-id="@Model.PlayerId">Leave Creator</a>
+    <a asp-controller="Player" asp-action="Details">Leave Creator</a>
     <br/>
     <a asp-action="SetProfessionView" asp-route-playerId="@Model.PlayerId" asp-route-profession="@Model.Profession">Back to Profession choice</a>
 </div>
