--- a/wizards/WizardsWeb/Views/Hero/SetProfession.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/SetProfession.cshtml
@@ -50,7 +50,7 @@
 
 <div>
     <br />
-    <a asp-controller="Player" asp-action="Details" asp-route-id="@Model.PlayerId">Leave Creator</a>
+    <a asp-controller="Player" asp-action="Details">Leave Creator</a>
 </div>
 
 @section Scripts {
