--- a/wizards/WizardsWeb/Views/Player/_PlayerInfo.cshtml
+++ b/wizards/WizardsWeb/Views/Player/_PlayerInfo.cshtml
@@ -3,7 +3,7 @@
 
 <h2>@Model.UserName</h2>
 <h4>Player account</h4>
-<a asp-action="Edit" asp-route-id="@Model.Id">Edit Player's Profile</a>
+<a asp-action="Edit">Edit Player's Profile</a>
 <hr />
 <dl>
     <dt class="col-sm-5">
