Correct issue with Password Change; Remove unused properties;

--- a/wizards/WizardsWeb/Views/Player/Edit.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Edit.cshtml
@@ -3,7 +3,7 @@
 
 <h3>Edit Player's Profile</h3>
 <h5>@Model.UserName</h5>
-<a asp-action="Details" asp-route-id="@Model.Id">Back To Details</a>
+<a asp-action="Details">Back To Details</a>
 <hr />
 <div class="row">
     <div class="col-md-4">
