--- a/wizards/WizardsWeb/Views/Player/_PlayersHeroes.cshtml
+++ b/wizards/WizardsWeb/Views/Player/_PlayersHeroes.cshtml
@@ -3,7 +3,7 @@
 
 <h2>Player's Heroes</h2>
 <br />
-<a type="button" class="btn btn-warning" asp-controller="Hero" asp-action="StartCreation" asp-route-playerId="@Model.Id">Create New Hero</a>
+<a type="button" class="btn btn-warning" asp-controller="Hero" asp-action="StartCreation">Create New Hero</a>
 <br />
 <table class="table">
     <thead>
