--- a/wizards/WizardsWeb/Views/Hero/SetProfession.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/SetProfession.cshtml
@@ -11,6 +11,7 @@
 
 
 <form asp-action="SetProfession">
+    <input asp-for="AvatarImageNumber" hidden="true"/>
     <hr/>
     <div class="row">
         <div class="col-md-1" align="center">
@@ -22,9 +23,9 @@
         <div class="col-md-7">
             <h5>Sorcerer</h5>
             <p>
-                Sorcerers are using the power of natural elements to deal high damage and protect themselves. 
+                Sorcerers are using the power of natural elements to deal high damage and protect themselves.
                 They are using staffs, spell-books or scepters as weapons.
-                Theirs power is as wild as element they use. 
+                Theirs power is as wild as element they use.
             </p>
         </div>
     </div>
@@ -43,7 +44,7 @@
     </div>
     <hr/>
     <div class="form-group">
-        <input type="submit" value="Set profession" class="btn btn-primary"/>
+        <input type="submit" asp-action="SetProfession" value="Set profession" class="btn btn-primary"/>
     </div>
 </form>
 
@@ -54,6 +55,6 @@
 
 @section Scripts {
     @{
-    await Html.RenderPartialAsync("_ValidationScriptsPartial");
-}
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
