--- a/wizards/WizardsWeb/Views/Hero/SetProfession.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/SetProfession.cshtml
@@ -49,8 +49,7 @@
 </form>
 
 <div>
-    <br />
-    <a asp-controller="Player" asp-action="Details">Leave Creator</a>
+    <a class="btn btn-danger"asp-controller="Player" asp-action="Details">Leave Creator</a>
 </div>
 
 @section Scripts {
