--- a/wizards/WizardsWeb/Views/Player/Details.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Details.cshtml
@@ -7,15 +7,10 @@
 
 
 <div class="row">
-    <div class="col-sm-4">
+    <div class="col-3">
         <partial name="_PlayerInfo" model="Model" />
     </div>
-    <div class="col-sm-8">
+    <div class="col-9">
         <partial name="_PlayersHeroes" model="Model" />
     </div>
-</div>
-
-
-<div>
-    <a asp-controller="Home" asp-action="Index">Back to Home Page</a>
 </div>
