--- a/wizards/WizardsWeb/Views/Hero/Delete.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/Delete.cshtml
@@ -5,18 +5,18 @@
 }
 
 <h1>Delete Hero</h1>
-<br />
-<h3 class="alert-danger">Are you sure you want to delete @Model.Basics.NickName?</h3>
-<h4 class="alert-danger">All progress made on this character will be lost!</h4>
+<div class="alert alert-danger">
+    <h3>Are you sure you want to delete @Model.Basics.NickName?</h3>
+    <h4>All progress made on this character will be lost!</h4>
+</div>
 <hr />
-
 <div>
     <div class="row">
         <div class="col-md-4">
-            <partial name="_HeroBasicPresentation" model="@Model.Basics"/>
+            <partial name="_HeroBasicPresentation" model="@Model.Basics" />
         </div>
         <div class="col-md-4">
-            <partial name="_HeroStatistics" model="@Model.Statistics"/>
+            <partial name="_HeroStatistics" model="@Model.Statistics" />
         </div>
     </div>
 
@@ -28,8 +28,10 @@
                 <input asp-for="ConfirmNickName" class="form-control" />
                 <span asp-validation-for="ConfirmNickName" class="text-danger"></span>
             </div>
-            <input type="submit" value="Delete" class="btn btn-danger" /> |
-            <a type="button" class="btn btn-success" asp-action="Details" asp-controller="Player">Cancel</a>
+            <div class="btn-group">
+                <a type="button" class="btn btn-success" asp-action="Details" asp-controller="Player">Cancel</a>
+                <input type="submit" value="Delete" class="btn btn-danger" />
+            </div>
         </form>
     </div>
 </div>
