--- a/wizards/WizardsWeb/Views/Hero/EditNickName.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/EditNickName.cshtml
@@ -5,13 +5,14 @@
 }
 
 <h3>Edit Hero's Name</h3>
-<hr/><br/>
-This operation costs: @($"{Model.Cost:##,##0}") gold!<br />
-Your gold: @($"{Model.Gold:##,##0}")<br/>
-<hr/>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="EditNickName">
+            <hr/>
+            <span>This operation costs: </span><span class="font-weight-bold">@($"{Model.Cost:##,##0}")</span><span> gold!</span><br />
+            <span>Your balance: </span><span class="font-weight-bold">@($"{Model.Gold:##,##0}")</span><span> gold</span><br/>
+            <span asp-validation-for="NickName" class="text-danger font-weight-bold"></span>
+            <hr/>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <input asp-for="Id" hidden="true" />
@@ -19,17 +20,13 @@ Your gold: @($"{Model.Gold:##,##0}")<br/>
             <div class="form-group">
                 <label asp-for="NickName" class="control-label"></label>
                 <input asp-for="NickName" class="form-control" />
-                <span asp-validation-for="NickName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="btn-group">
+                <a type="button" class="btn btn-warning" asp-action="Details" asp-route-id="@Model.Id">Back to Details</a>
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a type="button" class="btn btn-warning" asp-action="Details" asp-route-id="@Model.Id">Back to Details</a>
 </div>
 
 @section Scripts {
