--- a/wizards/WizardsWeb/Views/Player/Create.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Create.cshtml
@@ -37,15 +37,12 @@
                 <input asp-for="DateOfBirth" class="form-control"/>
                 <span asp-validation-for="DateOfBirth" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-warning"/>
+            <div class="btn-group">
+                <a class="btn btn-warning" asp-controller="Home" asp-action="Index">Abort</a>
+                <input type="submit" value="Create" class="btn btn-primary"/>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-controller="Home" asp-action="Index">Back to Home Page</a>
 </div>
 
 @section Scripts {
