--- a/wizards/WizardsWeb/Views/Player/Edit.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Edit.cshtml
@@ -3,13 +3,11 @@
 
 <h3>Edit Player's Profile</h3>
 <h5>@Model.UserName</h5>
-<a asp-action="Details">Back To Details</a>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <a type="button" class="btn btn-primary" asp-action="EditPassword">Edit Password</a><br/><br/>
-        <a type="button" class="btn btn-danger" asp-action="Delete">Delete Account</a>
-        <br/>
+        <a type="button" class="btn btn-danger" asp-action="Delete">Delete Account</a><br/><br/>
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -22,8 +20,9 @@
                 <input asp-for="DateOfBirth" class="form-control"/>
                 <span asp-validation-for="DateOfBirth" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary"/>
+            <div class="btn-group">
+                <a class="btn btn-warning" asp-action="Details">Back To Details</a>
+                <input type="submit" value="Save Changes" class="btn btn-primary"/>
             </div>
         </form>
     </div>
