--- a/wizards/WizardsWeb/Views/Player/EditPassword.cshtml
+++ b/wizards/WizardsWeb/Views/Player/EditPassword.cshtml
@@ -28,15 +28,12 @@
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="btn-group">
+                <a type="button" class="btn btn-warning" asp-action="Edit">Back to Edit</a>
+                <input type="submit" value="Change Password" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a type="button" class="btn btn-warning" asp-action="Edit">Back to Edit</a>
 </div>
 
 @section Scripts {
