--- a/wizards/WizardsWeb/Views/Player/_PlayersHeroes.cshtml
+++ b/wizards/WizardsWeb/Views/Player/_PlayersHeroes.cshtml
@@ -2,9 +2,8 @@
 @model WizardsWeb.ModelViews.PlayerDetailsModelView
 
 <h2>Player's Heroes</h2>
-<br />
 <a type="button" class="btn btn-warning" asp-controller="Hero" asp-action="StartCreation">Create New Hero</a>
-<br />
+<br /><br />
 <table class="table">
     <thead>
         <tr>
@@ -17,6 +16,7 @@
             <th>
                 <label asp-for="Heroes.First().Profession">Profession</label>
             </th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -36,8 +36,9 @@
                 <td>
                     <a type="button" class="btn btn-primary" asp-controller="Hero" asp-action="Details" asp-route-id="@hero.Id">
                         Play Character
-                    </a> 
-                    <a type="button" class="btn btn-danger" asp-controller="Hero" asp-action="Delete" asp-route-id="@hero.Id">
+                    </a>
+                    <br/><br/>
+                    <a type="button" class="btn btn-danger btn-sm" asp-controller="Hero" asp-action="Delete" asp-route-id="@hero.Id">
                         Delete
                     </a>
                 </td>
