--- a/wizards/WizardsWeb/Views/Shared/_LoginPartial.cshtml
+++ b/wizards/WizardsWeb/Views/Shared/_LoginPartial.cshtml
@@ -7,20 +7,16 @@
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
+    <li class="nav-item btn-group">
         <a id="manage" class="btn btn-light" asp-controller="Player" asp-action="Details">@UserManager.GetUserName(User)</a>
-    </li>
-    <li class="nav-item">
-        <a id="logout" class="btn btn-warning" asp-controller="Player" asp-action="Logout">Logout</a>
+        <a id="logout" class="btn btn-danger" asp-controller="Player" asp-action="Logout">Logout</a>
     </li>
 }
 else
 {
-    <li class="nav-item">
+    <li class="nav-item btn-group">
         <a class="btn btn-primary" id="register" asp-controller="Player" asp-action="Create">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="btn btn-success" id="login" asp-controller="Player" asp-action="Login">Login</a>
+        <a class="btn btn-warning" id="login" asp-controller="Player" asp-action="Login">Login</a>
     </li>
 }
 </ul>
